[package]
name = "requestd"
version = "0.0.2"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"
homepage = "https://gitlab.com/freifunk-luebeck/requestd"
description = "a daemon that collects respondd data from nodes"
license = "BSD 2-Clause License"
readme = "README.md"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "2.33"
crossbeam = "0.8"
curl = "0.4"
flate2 = "1.0"
jq-rs = {version = "0.4", features = ["bundled"]}
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
prometheus = "0.11.0"
rusqlite = {version = "0.21", features = ["chrono", "serde_json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
socket2 = {version = "0.3", features = ["reuseport"]}
zmq = "0.9"
hyper = {version = "0.13.7"}
futures = "0.3.5"
tokio = "0.2.22"
httparse = {version = "1.3"}
http = {version = "0.2.1"}
tiny_http = "0.7.0"
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["handlebars_templates"]}
actix-web = "3.3"
handlebars = "3.5"
tera = "1.6.1"

[profile.release]
panic="abort"


[package.metadata.deb]
name = "requestd"
depends = "python3, bsdutils, python3-prometheus-client"
build-depends = "libsqlite3-dev libzmq3-dev"
section = "Utilities"
conf-files = ["/etc/requestd.yml"]
maintainer-scripts = "assets/deb-scripts"
assets = [
    ["assets/requestd.service",         "/lib/systemd/system/",     "664"],
    ["target/release/requestd",         "/usr/bin/",                "755"],
    ["assets/config.yml",               "/etc/requestd.yml",        "664"],
    # hooks
    ["assets/hooks/new_node.py",        "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/offline.py",         "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/hopglass.py",        "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/hopglass_nodes.py",  "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/hopglass_graph.py",  "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/prometheus.py",      "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/prometheus_web.py",  "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/update.py",          "/usr/local/lib/requestd/", "775"],
    ["assets/hooks/zonefile.py",        "/usr/local/lib/requestd/", "775"],
]
