[package]
name = "requestd"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"
homepage = "https://gitlab.com/freifunk-luebeck/requestd"
description = "a daemon that collects respondd data from nodes"
license = "BSD 2-Clause License"
readme = "README.md"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "2.33.3"
crossbeam = {version = "0.8.1", features = ["crossbeam-channel"]}
flate2 = "1.0.21"
lazy_static = "1.4.0"
libc = "0.2.100"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
serde_yaml = "0.8.20"
socket2 = "0.4.1"
zmq = "0.9.2"
rocket = "0.4.10"
rocket_contrib = {version = "0.4"}
paho-mqtt = "0.9.1"


[profile.release]
# panic="abort"


[package.metadata.deb]
name = "requestd"
section = "Utilities"
depends = "$auto"
conf-files = ["/etc/requestd.yml"]
maintainer-scripts = "debian/"
assets = [
    ["debian/requestd.service", "/lib/systemd/system/requestd.service", "644"],
    ["target/release/requestd", "/usr/bin/", "755"],
    ["debian/requestd.yml", "/etc/requestd.yml", "664"],
]

[package.metadata.deb.systemd-units]
enable = true
unit-name = "request"
