[package]
name = "ffhl-ack"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4.6", features = ["serde"]}
clap = "2.32.0"
crossbeam-channel = "0.3.9"
curl = "0.4.23"
eui48 = "0.3"
flate2 = "1.0.11"
influx_db_client = "0.3.6"
libc = "0.2.62"
libflate = "0.1.27"
log = "0.4.0"
postgres = {version = "0.15.2", features = ["with-serde_json", "with-chrono", "with-eui48"]}
pretty_env_logger = "0.3.0"
reqwest = "0.9.20"
rusqlite = "0.20.0"
serde = {version = "1.0.100", features = ["derive"]}
serde_json = "1.0.40"
toml = "0.4.10"
zmq = "0.9.2"
