[package]
name = "ffhl_multicast"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@posteo.de>"]
edition = "2018"

[dependencies]
libflate = "0.1.27"
flate2 = "1.0.11"
log = "0.4.8"
libc = "0.2.62"
crossbeam-channel = "0.3.9"
chrono = {version = "0.4.6", features = ["serde"]}
serde = {version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
